...
    }
}

@Composable
private fun TodoFloatingActionButton(onAddItem: (TodoItem) -> Unit) {
    FloatingActionButton(
        modifier = Modifier.testTag("AddTodoFAB"),
        onClick = { onAddItem(generateRandomTodoItem()) }
    ) {
        Icon(
            imageVector = Icons.Default.Add,
            contentDescription = stringResource(R.string.cd_add_item)
        )
...
    onStartEdit: (TodoItem) -> Unit,
    onEditItemChange: (TodoItem) -> Unit,
    onEditDone: () -> Unit,
    modifier: Modifier = Modifier,
) {
    LazyColumn(
        modifier = modifier.testTag("TodoList"),
        contentPadding = PaddingValues(top = 8.dp, bottom = 56.dp + 16.dp)
    ) {
        items(key = { it.id }, items = items) { todo ->
            if (currentlyEditing?.id == todo.id) {
                TodoItemInlineEditor(
                    item = currentlyEditing,
...
            onItemComplete(TodoItem(text, icon))
        }
        setIcon(TodoIcon.Default)
        setText("")
    }

    TodoItemInput(
        text = text,
        buttonText = stringResource(R.string.add),
        onTextChange = setText,
        icon = icon,
        onIconChange = setIcon,
        submit = submit,
...
