<?xml version="1.0" encoding="UTF-8" ?>

<!--
  ~ Copyright (c) 2021. Christian Grach <christian.grach@cmgapps.com>
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Compomaeon</string>
    <string name="cd_expand">Expand</string>
    <string name="cd_collapse">Collapse</string>
    <string name="cd_crop_square">Crop</string>
    <string name="cd_done">Done</string>
    <string name="cd_event">Event</string>
    <string name="cd_privacy">Privacy</string>
    <string name="cd_restore">Restore</string>
    <string name="cd_add_item">Add Random Item</string>
    <string name="whoops">Whoops, something went wrong</string>
    <string name="cd_delete">Delete item</string>
    <string name="editing_item">Editing item</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
</resources>
