/*
 * Copyright (c) 2021. Christian Grach <christian.grach@cmgapps.com>
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package com.cmgapps.android.compomaeon

import androidx.compose.ui.test.assertCountEquals
import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.filter
import androidx.compose.ui.test.hasText
import androidx.compose.ui.test.junit4.createAndroidComposeRule
import androidx.compose.ui.test.onChildren
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.onRoot
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performTextInput
import androidx.compose.ui.test.printToLog
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.filters.LargeTest
import dagger.hilt.android.testing.HiltAndroidRule
import dagger.hilt.android.testing.HiltAndroidTest
import kotlinx.coroutines.ExperimentalCoroutinesApi
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@OptIn(ExperimentalCoroutinesApi::class)
@RunWith(AndroidJUnit4::class)
@HiltAndroidTest
@LargeTest
class TodoActivityShould {

    @get:Rule
    var hiltRule = HiltAndroidRule(this)

    @get:Rule
    val composeTestRule = createAndroidComposeRule<TodoActivity>()

    @Test
    fun addAutoItem() {
        composeTestRule.onNodeWithTag("AddTodoFAB").assertIsDisplayed().performClick()
        composeTestRule.onNodeWithTag("TodoList").onChildren().assertCountEquals(1)
    }

    @Test
    fun addCustomItems() {
        val addButtonText = composeTestRule.activity.getString(R.string.add)
        composeTestRule.onNodeWithTag("TodoItemInput").assertIsDisplayed()
            .performTextInput("Test Todo")
        composeTestRule.onNodeWithText(addButtonText).assertIsDisplayed().performClick()

        composeTestRule.onNodeWithTag("TodoItemInput").assertIsDisplayed()
            .performTextInput("Test Todo 2")
        composeTestRule.onNodeWithText(addButtonText).assertIsDisplayed().performClick()

        composeTestRule.onRoot().printToLog(TodoActivityShould::class.java.simpleName)
        composeTestRule.onNodeWithTag("TodoList").onChildren().assertCountEquals(2)
            .filter(hasText("Test Todo"))[0].assertIsDisplayed()
    }
}
